<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bryanville.familyexpenditure.AddNewExpenditureActivity">
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/itemNameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:textSize="20sp"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:hint="@string/itemNameHint"
        android:inputType="textPersonName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp" />

    <EditText
        android:id="@+id/itemQuantityText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:textSize="20sp"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:hint="@string/quantityHint"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemNameText"
        android:layout_marginLeft="8dp" />

    <EditText
        android:id="@+id/itemAmountText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:textSize="20sp"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:inputType="number"
        android:hint="@string/item_amount_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemQuantityText"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/itemStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:text="@string/item_status"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemAmountText"
        android:layout_marginLeft="8dp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/itemStatus"
        app:layout_constraintTop_toBottomOf="@id/itemAmountText"
        android:layout_marginLeft="100dp">

        <RadioButton
            android:id="@+id/itemStatusPaid"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="chooseExpenditureStatus"
            android:paddingRight="20dp"
            android:text="@string/itemStatusPaid"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/itemStatusCredit"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="chooseExpenditureStatus"
            android:text="@string/itemStatusCredit"
            android:textSize="20sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/itemDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_date"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="20sp"
        android:onClick="chooseDateDialog"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemStatus"/>

    <EditText
        android:id="@+id/expenditureDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:hint="@string/date_hint"
        android:inputType="date"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/itemDate"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:text="@string/string_comment"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemDate"
        android:layout_marginLeft="8dp" />

    <EditText
        android:id="@+id/expenditureCommentText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/comment_hint"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/action_save"
        android:textSize="18sp"
        android:onClick="saveExpenditureToDatabase"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expenditureCommentText" />
</android.support.constraint.ConstraintLayout>

</ScrollView>
